--- a/homehub/website/appclient/package.json
+++ b/homehub/website/appclient/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
